o Fixed the asynchronous disconnection lost of data o Get rid of teh deprecated newInstance()