@@ -45,6 +45,7 @@
  */
 package org.lsc.jndi;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 import java.util.Properties;
 
@@ -58,7 +59,6 @@ import org.lsc.configuration.LscConfiguration;
 import org.lsc.configuration.TaskType;
 import org.lsc.exception.LscServiceConfigurationException;
 import org.lsc.exception.LscServiceException;
-import org.lsc.service.IService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -145,7 +145,7 @@ public class SimpleJndiSrcService extends AbstractSimpleJndiService {
 	        throws LscServiceException {
 		IBean srcBean;
 		try {
-			srcBean = this.beanClass.newInstance();
+			srcBean = this.beanClass.getDeclaredConstructor().newInstance();
 			String searchString = null;
 			if(fromSameService || filterIdClean == null) {
 				searchString = filterIdSync;
@@ -154,12 +154,10 @@ public class SimpleJndiSrcService extends AbstractSimpleJndiService {
 			}
 
 			return this.getBeanFromSR(get(pivotName, pivotAttributes, searchString), srcBean);
-		} catch (InstantiationException e) {
-			LOGGER.error("Bad class name: " + beanClass.getName() + "(" + e + ")");
-			LOGGER.debug(e.toString(), e);
-		} catch (IllegalAccessException e) {
-			LOGGER.error("Bad class name: " + beanClass.getName() + "(" + e + ")");
-			LOGGER.debug(e.toString(), e);
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                InvocationTargetException e) {
+            LOGGER.error("Bad class name: " + beanClass.getName() + "(" + e + ")");
+            LOGGER.debug(e.toString(), e);
 		} catch (NamingException e) {
 			throw new LscServiceException(e);
 		}
