@@ -46,6 +46,7 @@
 package org.lsc.service;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
@@ -78,6 +79,7 @@ import org.apache.directory.api.ldap.model.message.*;
 import org.apache.directory.api.ldap.model.message.controls.AbstractControl;
 import org.apache.directory.api.ldap.model.message.controls.PersistentSearch;
 import org.apache.directory.api.ldap.model.message.controls.PersistentSearchImpl;
+import org.apache.directory.api.ldap.model.message.extended.SearchNoDResponse;
 import org.apache.directory.api.ldap.model.name.Dn;
 import org.apache.directory.api.ldap.model.url.LdapUrl;
 import org.apache.directory.ldap.client.api.LdapAsyncConnection;
@@ -87,6 +89,7 @@ import org.apache.directory.ldap.client.api.future.SearchFuture;
 import org.lsc.LscDatasets;
 import org.lsc.beans.IBean;
 import org.lsc.configuration.*;
+import org.lsc.exception.LscException;
 import org.lsc.exception.LscServiceCommunicationException;
 import org.lsc.exception.LscServiceConfigurationException;
 import org.lsc.exception.LscServiceException;
@@ -265,7 +268,7 @@ public class SyncReplSourceService extends SimpleJndiSrcService implements IAsyn
 
 			// Fetch the first entry found, and close the cursor
 			for ( Entry entry:entryCursor ) {
-	            srcBean = beanClass.newInstance();
+	            srcBean = beanClass.getDeclaredConstructor().newInstance();
 
 	            srcBean.setMainIdentifier(entry.getDn().getName());
 	            srcBean.setDatasets(convertEntry(entry));
@@ -276,10 +279,8 @@ public class SyncReplSourceService extends SimpleJndiSrcService implements IAsyn
 			entryCursor.close();
 			
 			return srcBean;
-		} catch (InstantiationException e) {
-			LOGGER.error("Bad class name: {}({})", beanClass.getName(), e);
-			LOGGER.debug(e.toString(), e);
-		} catch (IllegalAccessException e) {
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                InvocationTargetException e) {
 			LOGGER.error("Bad class name: {}({})", beanClass.getName(), e);
 			LOGGER.debug(e.toString(), e);
 		} catch (Exception e) {
@@ -330,81 +331,114 @@ public class SyncReplSourceService extends SimpleJndiSrcService implements IAsyn
 	
 	@Override
 	public Map.Entry<String, LscDatasets> getNextId() throws LscServiceException {
-		if ((searchFuture == null) || searchFuture.isCancelled()) {
-		    createSearchFuture();
-		}
+		boolean retry = true;
+		int nbRetries = 0;
 		
 		// Ok, we are ready. Get the first entry that waits
 		try {
-		    
-		    Response searchResponse = searchFuture.get();
-		    
-		    if (searchResponse == null) {
-		        // Not a SearchResponse instance...
-		        return null;
-		    } else if ( searchResponse instanceof SearchResultEntry) {
-		        // We've got something that may be an entry, a referral or an SyncInfo Value
-		        // Intermediate response (at the end of the refresh phase)
-	            SearchResultEntry searchResultEntry = ((SearchResultEntry) searchResponse);
-	            Dn entryDn = searchResultEntry.getObjectName();
-	                
-	            LOGGER.info( "Processing entry {}", entryDn);
-            
-	            switch (searchResultEntry.getType()) {
-	                case SEARCH_RESULT_ENTRY:
-	                    // A plain entry. Let's check it's status, it may be for a deleted
-	                    // entry
-	                    LscDatasets datasets = convertEntry(searchResultEntry.getEntry(), true);
-	                    
-	                    // Check if it's a deletion
-	                    SyncStateValue syncStateCtrl = (SyncStateValue)searchResponse.getControl(SyncStateValue.OID);
-	                    
-	                    if ((syncStateCtrl != null) 
-	                            && (syncStateCtrl.getSyncStateType() == SyncStateTypeEnum.DELETE)) {
-	                        // It's a deletion, add a special attribute that is not valid in LDAP
-	                        // (because of the starting '_'. That will mark the entry as deleted
-	                        datasets.getDatasets().put(DELETED_ENTRY, entryDn);
-	                    }
+		    while ( retry ) {
+		        if ((searchFuture == null) || searchFuture.isCancelled()) {
+		            try {
+		                createSearchFuture();
+		                
+                        LOGGER.info( "Reconnected!");
+		                nbRetries = 0;
+		            } catch ( LscException le ) {
+		                // Let's try again
+		                nbRetries++;
+		                LOGGER.info( "Not connected, waiting 5s and retrying, attempt #{}", nbRetries);
+                        
+                        // Wait 5 secondes
+                        Thread.sleep( 5000 );
+                        
+                        // Let's retry 
+                        continue;
+		            }
+		        }
+		        
+    		    Response searchResponse = searchFuture.get();
+    		    
+    		    if (searchResponse == null) {
+    		        // Not a SearchResponse instance...
+    		        return null;
+    		    } else if ( searchResponse instanceof SearchNoDResponse ) {
+                    // We may have lost the connection, check that
+                    if ( !connection.isConnected() )
+                    {
+                        LOGGER.info( "Not connected, retrying...");
 
-	                    return Map.entry(entryDn.toString(), datasets);
-	                    
-	                case SEARCH_RESULT_REFERENCE:
-	                    // TODO...
-	                    return null;
-	                    
-	                case SEARCH_RESULT_DONE:
-	                    // This is the end, beautiful friend,
-	                    // This is the end, my only friend
-	                    // (The Doors)
-	                    LdapResult result = ((SearchResultDone)searchResultEntry).getLdapResult();
-	                    
-	                    if (result.getResultCode() != ResultCodeEnum.SUCCESS) {
-	                        throw new LscServiceCommunicationException(result.getDiagnosticMessage(), null);
-	                    }
-	                    
-	                    searchFuture = null;
-	                    
-	                    return null;
-	                    
-	                default:
-	                    // Can't be...
-	                    return null;
-	            }
-		    } else if ( searchResponse instanceof SyncInfoValue ){
-		        // This is the end of the refresh phase, log the info
-		        SyncInfoValue syncInfoValue = (SyncInfoValue)searchResponse;
-		        LOGGER.info("Refresh phase done: {} in {} ms", syncInfoValue.isRefreshDone(),
-		                System.currentTimeMillis() - refreshStart);
-		        
-		        // Now we are done with the refresh, we need to cleanup the destination
-		        // by removing the deleted entries 
-		        cleanupDestination();
-		        
-		        return null;
-		    } else {
-		        // Can't be
-		        return null;
+                        // Let's retry 
+                        continue;
+                    }
+                    else {
+                        return null;
+                    }
+    		    } else if ( searchResponse instanceof SearchResultEntry) {
+    		        // We've got something that may be an entry, a referral or an SyncInfo Value
+    		        // Intermediate response (at the end of the refresh phase)
+    	            SearchResultEntry searchResultEntry = ((SearchResultEntry) searchResponse);
+    	            Dn entryDn = searchResultEntry.getObjectName();
+    	                
+    	            LOGGER.info( "Processing entry {}", entryDn);
+                
+    	            switch (searchResultEntry.getType()) {
+    	                case SEARCH_RESULT_ENTRY:
+    	                    // A plain entry. Let's check it's status, it may be for a deleted
+    	                    // entry
+    	                    LscDatasets datasets = convertEntry(searchResultEntry.getEntry(), true);
+    	                    
+    	                    // Check if it's a deletion
+    	                    SyncStateValue syncStateCtrl = (SyncStateValue)searchResponse.getControl(SyncStateValue.OID);
+    	                    
+    	                    if ((syncStateCtrl != null) 
+    	                            && (syncStateCtrl.getSyncStateType() == SyncStateTypeEnum.DELETE)) {
+    	                        // It's a deletion, add a special attribute that is not valid in LDAP
+    	                        // (because of the starting '_'. That will mark the entry as deleted
+    	                        datasets.getDatasets().put(DELETED_ENTRY, entryDn);
+    	                    }
+    
+    	                    return Map.entry(entryDn.toString(), datasets);
+    	                    
+    	                case SEARCH_RESULT_REFERENCE:
+    	                    // TODO...
+    	                    return null;
+    	                    
+    	                case SEARCH_RESULT_DONE:
+    	                    // This is the end, beautiful friend,
+    	                    // This is the end, my only friend
+    	                    // (The Doors)
+    	                    LdapResult result = ((SearchResultDone)searchResultEntry).getLdapResult();
+    	                    
+    	                    if (result.getResultCode() != ResultCodeEnum.SUCCESS) {
+    	                        throw new LscServiceCommunicationException(result.getDiagnosticMessage(), null);
+    	                    }
+    	                    
+    	                    searchFuture = null;
+    	                    
+    	                    return null;
+    	                    
+    	                default:
+    	                    // Can't be...
+    	                    return null;
+    	            }
+    		    } else if ( searchResponse instanceof SyncInfoValue ){
+    		        // This is the end of the refresh phase, log the info
+    		        SyncInfoValue syncInfoValue = (SyncInfoValue)searchResponse;
+    		        LOGGER.info("Refresh phase done: {} in {} ms", syncInfoValue.isRefreshDone(),
+    		                System.currentTimeMillis() - refreshStart);
+    		        
+    		        // Now we are done with the refresh, we need to cleanup the destination
+    		        // by removing the deleted entries 
+    		        cleanupDestination();
+    		        
+    		        return null;
+    		    } else {
+    		        // Can't be
+    		        return null;
+    		    }
 		    }
+		    
+		    return null;
         } catch (InterruptedException e) {
             LOGGER.warn("Interrupted search !");
             
